Fix p, ul, and ol elements not wrapping

--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 * {
     box-sizing: border-box;
+    overflow-wrap: break-word;
 }
 
 body {
     background-color: #d5b78b;
     color: #333333;
     font-family: 'Courier New', Courier, monospace;
-    width: 
+    margin: 0 auto;
+    max-width: 72ch;
 }
 
 h1,
@@ -23,7 +25,7 @@ h6 {
 p,
 ul,
 ol {
-    width: 72ch;
+    max-width: 72ch;
 }
 
 img {
